--- a/jklinges.github.io.html
+++ b/jklinges.github.io.html
@@ -70,18 +70,23 @@
                     </a>
                 </p>
                 <div>
-                    <p>John Klinges is a treasury analyst for Wells Fargo. I am an attorney with extensive experience in capital markets finance and planning (6 yrs.),credit/lending (10 yrs.),  treasury (6 yrs.), compliance (10 yrs.), project management, business analytics and strategy (5 yrs.).
-	                   Training:  Formally trained in credit analyst, financial analyst, business and data analyst & audit programs.
+                    <p>I am a treasury analyst for Wells Fargo. I am an attorney with extensive experience in capital markets
+                       finance and planning (6 yrs.),credit/lending (10 yrs.),  treasury (6 yrs.), compliance (10 yrs.), project management,
+                       business analytics and strategy (5 yrs.).
+	                   Training:  Formally trained in credit analyst, financial analyst, business and data and analyst and audit programs.
 	                   Regulatory Liaison: Strong knowledge of Investment Comp. Advisers & Dodd Frank Acts, SEC/FRB/OCC
 	                   FDIC/BCBS regulations.
-                        <p>
-                       John holds a Law degree (JD) from Seton Hall University and a MBA in Finance from New York University’s Stern Graduate School of Business. </br> He holds a Executive Masters of Public Administration from the University of Pennsylvania and a BA in History/Government from Franklin and Marshall College. </br>  He attended the Masters of Accounting Program at UNC-Chapel Hill.
+                       <p>
+                       John holds a Law degree (JD) from Seton Hall University and a MBA in Finance from New York University’s Stern Graduate
+                       School of Business. </br> He holds a Executive Masters of Public Administration from the University of Pennsylvania and 
+                       a BA in History/Government from Franklin and Marshall College. </br>  He attended the Masters of Accounting Program at 
+                       UNC-Chapel Hill.
                        Certifications:	Financial Risk Manager (FRM). Member Curriculum Committee: Global Association of Risk Managers. </br>  
                        Chartered Alternative Investment Analyst (CAIA). 
                        Project Manager Professional (PMP) - Certified by Project Management Institute. </br>  
                        <p>
                        I am currrenty using the tools I have gathered from the <a href="https://techbootcamps." target="_blank">
-                         Data Analytics and Visualization Program at UNC Chapel Hill/a> to find actionable business solutions.
+                       Data Analytics and Visualization Program at UNC Chapel Hill/a> to find actionable business solutions.
                     </p>
 
                     <br>
